nav fix on mobile, and spacing

--- a/src/app/modules/layout/nav/nav.component.css
+++ b/src/app/modules/layout/nav/nav.component.css
@@ -136,7 +136,7 @@ li{
         z-index: 1000;
     }
 }
-@media screen and (max-width: 700px){
+@media screen and (max-width: 800px){
     .btn-menu{
         display: flex;
     }
